test/tests/compiler/18_structures/invalid_parse/extra_credit/union_member_storage_class.plx
type union y (
    # union member cannot have storage class
    data a: i32
)
